--- a/SeSAC3Week5/Base.lproj/Main.storyboard
+++ b/SeSAC3Week5/Base.lproj/Main.storyboard
@@ -171,7 +171,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mA8-gK-vZj">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <rect key="frame" x="0.0" y="159" width="393" height="659"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5MB-fk-hYy">
                                     <size key="itemSize" width="128" height="128"/>
@@ -190,23 +190,33 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jxf-Ww-rJg">
+                                <rect key="frame" x="76" y="59" width="241" height="78"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="sendNotification:" destination="y0v-gs-xmN" eventType="touchUpInside" id="esF-Y2-uoh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="AG0-H6-KkX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="mA8-gK-vZj" firstAttribute="leading" secondItem="AG0-H6-KkX" secondAttribute="leading" id="J9a-Hx-R3X"/>
-                            <constraint firstItem="mA8-gK-vZj" firstAttribute="top" secondItem="AG0-H6-KkX" secondAttribute="top" id="Jzx-MS-1T6"/>
+                            <constraint firstItem="mA8-gK-vZj" firstAttribute="top" secondItem="AG0-H6-KkX" secondAttribute="top" constant="100" id="Jzx-MS-1T6"/>
                             <constraint firstItem="AG0-H6-KkX" firstAttribute="bottom" secondItem="mA8-gK-vZj" secondAttribute="bottom" id="cWC-tz-mG6"/>
                             <constraint firstItem="AG0-H6-KkX" firstAttribute="trailing" secondItem="mA8-gK-vZj" secondAttribute="trailing" id="pSg-rI-5Kw"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="notificationButton" destination="jxf-Ww-rJg" id="9X0-f7-7Mm"/>
                         <outlet property="posterCollectionView" destination="mA8-gK-vZj" id="aCP-Cc-AYq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X18-kN-wOu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1027" y="693"/>
+            <point key="canvasLocation" x="1026.7175572519084" y="692.25352112676057"/>
         </scene>
         <!--Basic View Controller-->
         <scene sceneID="79a-ML-9tP">
